syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service CyclesMinting {
  rpc total_cycles_minted (google.protobuf.Empty)
  returns (google.protobuf.UInt64Value) {
    option annotation = query;
  };
}
